tests/snapshots/examples_fixtures/async__01_run_async.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/01_run_async.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
