tests/snapshots/examples_fixtures/async__02_sleep_yield.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/02_sleep_yield.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
