tests/snapshots/examples_fixtures/async__03_both.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/03_both.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
