tests/snapshots/examples_fixtures/async__04_race.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/04_race.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
