tests/snapshots/examples_fixtures/async__05_first_of.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/05_first_of.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
