tests/snapshots/examples_fixtures/async__06_timeout.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/06_timeout.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
