tests/snapshots/examples_fixtures/async__07_try_fail.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/07_try_fail.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
