tests/snapshots/examples_fixtures/async__08_finally_bracket.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/08_finally_bracket.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
