tests/snapshots/examples_fixtures/async__09_scope_fork_cancel.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/09_scope_fork_cancel.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
