tests/snapshots/examples_fixtures/async__10_check_cancelled.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/10_check_cancelled.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
