tests/snapshots/examples_fixtures/async__11_runtime_config.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/11_runtime_config.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
