tests/snapshots/examples_fixtures/async__12_task_spawn_join.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/12_task_spawn_join.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
